--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /Exercicios/Atividade 1/Exercicio3/build/
 /Exercicios/Atividade 2/Vacinas/nbproject/private/
 /Exercicios/Atividade 2/Vacinas/build/
+/Aulas/26-08/26-08/nbproject/private/
+/Aulas/26-08/26-08/build/
