--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 /Exercicios/Atividade 2/Vacinas/build/
 /Aulas/26-08/26-08/nbproject/private/
 /Aulas/26-08/26-08/build/
+/Trabalhos/trabalho02/Trabalho02/nbproject/private/
+/Trabalhos/trabalho02/Trabalho02/build/
+/Aulas/02-09/Atividade02-09/nbproject/private/
+/Aulas/02-09/Atividade02-09/build/
+/Aulas/aula09-09/nbproject/private/
+/Exercicios/Atividade 3/concessionaria/nbproject/private/
